<resources>
    <string name="app_name">DigiPresence</string>


    <string name="description_logo"> Logo DigiPresence </string>
    <string name="icon_id"> Logo DigiPresence </string>
    <string name="matricule_hint"> Entrer votre matricule ici ! </string>
    <string name="txt_btn_valider"> Valider </string>


    <string name="copyright">Copyright 2021 dinamik LAB </string>
    <string name="activity_choix_message">Veuillez choisir une action !</string>
    <string name="bouton_depart_mission">Bouton Départ Mission</string>
    <string name="bouton_arrivee_mission">Bouton Arrivée Mission</string>
    <string name="bouton_arrivee">Bouton Arrivée</string>
    <string name="bouton_arrivee_pause">Bouton Arrivée Pause</string>
    <string name="bouton_depart_pause">Bouton Départ Pause</string>
    <string name="bouton_depart">Bouton Départ</string>
    <string name="bouton_absent">Bouton Absent</string>
    <string name="bouton_arrivee_conge">Bouton Arrivée Congé</string>
    <string name="bouton_depart_conge">Bouton Départ Congé</string>
    <string name="icon_matricule">QR Code</string>
    <string name="bouton_text_arriv_e_cong">Arrivée Congé</string>
    <string name="bouton_text_d_part_conge">Départ Conge</string>
    <string name="bouton_text_d_part">Départ</string>
    <string name="bouton_text_absent_e">Absent(e)</string>
    <string name="bouton_text_arriv_e_mission">Arrivée Mission</string>
    <string name="bouton_text_arriv_e_pause">Arrivée Pause</string>
    <string name="bouton_text_d_part_pause">Départ Pause</string>
    <string name="bouton_text_d_part_mission">Départ Mission</string>
    <string name="bouton_text_arriv_e">Arrivée</string>
</resources>
