<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChoixActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/black_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo_digipresence_white_xhdpi"
                android:contentDescription="@string/description_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/activity_choix_message"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:padding="@dimen/padding_title"
                android:textSize="16dp"/>

        </FrameLayout>

        <Button
            android:id="@+id/btn_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/green_fill_rounded_color"
            android:text="@string/bouton_text_arriv_e"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingHorizontal="140dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_dp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/orange_fill_rounded_color"
                android:paddingHorizontal="24dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/bouton_text_d_part_pause"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_ap"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/orange_fill_rounded_color"
                android:paddingHorizontal="24dp"
                android:textSize="16sp"
                android:text="@string/bouton_text_arriv_e_pause"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_dm"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/purple_fill_rounded_color"
                android:paddingHorizontal="14dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/bouton_text_d_part_mission"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_am"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/purple_fill_rounded_color"
                android:paddingHorizontal="14dp"
                android:textSize="16sp"
                android:text="@string/bouton_text_arriv_e_mission"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_dc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bluesky_fill_rounded_color"
                android:paddingHorizontal="20dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/bouton_text_d_part_conge"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_ac"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bluesky_fill_rounded_color"
                android:paddingHorizontal="20dp"
                android:textSize="16sp"
                android:text="@string/bouton_text_arriv_e_cong"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_abs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/red_fill_rounded_color"
            android:text="@string/bouton_text_absent_e"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingHorizontal="128dp" />

        <Button
            android:id="@+id/btn_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/blue_fill_rounded_color"
            android:text="@string/bouton_text_d_part"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingHorizontal="144dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginVertical="48dp"
        android:text="@string/copyright"
        android:textColor="#757575"
        android:textSize="12sp" />

</LinearLayout>